# wpt-coffea

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  PrepareQCDTemplates.py  README.md  get_norms.py  plots_and_combine_inputs.ipynb  pyproject.toml  runner.py  setup.cfg
.github/workflows/: ci.yml
filefetcher/: aram_samples.json  aram_samples_lpc.json  aram_samples_lpc_aIso.json
src/wpt_coffea/workflows/: __init__.py  base.py  dystudies.py  ptw.py  ptwqcd.py
tests/: test_package.py
