[metadata]
name = wpt_coffea
description = Tools for running the FNAL WPt analysis in coffea
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lgray/wpt-coffea
author = Lindsey Gray
author_email = lindsey.gray@gmail.com
maintainer = Lindsey Gray
maintainer_email = lindsey.gray@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://wpt_coffea.readthedocs.io/
    Bug Tracker = https://github.com/lgray/wpt-coffea/issues
    Discussions = https://github.com/lgray/wpt-coffea/discussions
    Changelog = https://github.com/lgray/wpt-coffea/releases

[options]
packages = find:
install_requires =
    coffea>=0.7.6
    notebook
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    pytest>=6

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
